<resources>
    <string name="app_name">Signum</string>
    <string name="imageDescription">Descripcion de imagen</string>
    <string name="login">Iniciar sesion</string>
    <string name="register">Registrarse</string>
    <string name="registerUnderline"><u>REGISTRARSE</u></string>
    <string name="empty" />
    <string name="optionRegister">O registrate clicando abajo</string>
    <string name="email">Correo electronico</string>
    <string name="emailSuggestion">Escribe tu correo electronico…</string>
    <string name="password">Contraseña</string>
    <string name="passwordSuggestion">Escribe tu contraseña…</string>
    <string name="forgotPassword">¿Has olvidado tu contraseña?</string>
    <string name="optionLogin">O inicia sesion clicando abajo</string>
    <string name="loginUnderline"><u>INICIAR SESION</u></string>
    <string name="username">Nombre de usuario</string>
    <string name="usernameSuggestion">Escribe tu nombre de usuario…</string>
    <string name="passwordConfirm">Confirmar contraseña</string>
    <string name="passwordConfirmSuggestion">Escribe tu contraseña de nuevo…</string>
    <string name="success">Éxito</string>
    <string name="warning">Advertencia</string>
    <string name="error">Error</string>
    <string name="errorEmpty">Todos los campos son obligatorios no pueden estar vacios</string>
    <string name="errorPassword">Las contraseñas no coinciden</string>
    <string name="errorEmail">El correo electronico no es valido</string>
    <string name="errorUsername">El nombre de usuario tiene que tener una longitud de 3 caracteres minimo</string>
    <string name="erroLogin">Los datos introducidos no existen</string>
    <string name="erroRegister">Ha habido un error al intentar registrarse</string>
    <string name="successRegister">Se ha registrado correctamente</string>
    <string name="errorValidatingEmail">Error al verificar el correo electrónico</string>
    <string name="errorEmailAlreadyExists">El correo electronico ya existe</string>
    <string name="errorPasswordLength">La contraseña es demasiado corta tiene que tener por lo menos 6 caracteres</string>
    <string name="errorEmailEmpty">El correo electronico no puede estar vacio</string>
    <string name="successResetEmail">Se ha enviado un correo electronico para restablecer la contraseña</string>
    <string name="errorResetEmail">Error al enviar el correo electronico para restablecer la contraseña</string>
    <string name="profile">Perfil</string>
    <string name="dictionary">Diccionario</string>
    <string name="learn">Aprende</string>
    <string name="explore">Explorar</string>
    <string name="placehoalderExplore">Introduce una palabra para buscar…</string>
    <string name="exampleText">Ejemplo de texto</string>
    <string name="categori">Categori</string>
    <string name="longTextExample">En un día soleado, decidí salir a caminar y disfrutar del aire fresco y la naturaleza.</string>
    <string name="emailExample">email@gmail.com</string>
    <string name="exampleName">Name</string>
    <string name="personalDetails">Datos personales</string>
    <string name="certificates">Certificados</string>
    <string name="ranking">Ranking</string>
    <string name="changeAccount">Cambiar de cuenta</string>
    <string name="closeSession">Cerrar sesion</string>
    <string name="personalDetailsImageDescription">Haz click en la imagen para cambiarla</string>
    <string name="birthDate">Fecha de nacimiento</string>
    <string name="birthDateSuggestion">Selecciona tu fecha de nacimiento…</string>
    <string name="save">Guardar</string>
    <string name="successUpdate">Actualizado correctamente</string>
    <string name="selectImage">Selecciona una imagen</string>
    <string name="errorLogImage">Error al cargar la imagen</string>
    <string name="exampleNumber">5</string>
    <string name="name">Nombre</string>
    <string name="examplePoints">19</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="certificate">Certificado</string>
    <string name="certificaDescription">De superacion de aptitud</string>
    <string name="certificateText1">Tenemos el honor de extender este certificado a</string>
    <string name="certificateText2">por concluir satisfactoriamente el curso de signum de </string>
    <string name="errorDataLearn">Error en la creacion de datos de juego, intentelo mas tarde de nuevo</string>
    <string name="signs">Signos</string>
    <string name="progress">Progreso</string>
    <string name="points">Puntos</string>
    <string name="exampleProgress">5%</string>
    <string name="optionExample">Dactitologia</string>
    <string name="skip">Saltar</string>
    <string name="correct">Correcto</string>
    <string name="incorrect">Incorrecto</string>
    <string name="correct_answer">Respuesta correcta, se han sumado 10 puntos a tu usuario</string>
    <string name="incorrect_answer">Respuesta incorrecta, se han restado 5 puntos a tu usuario</string>
    <string name="congratulations_message">¡Felicidades! Has completado el juego</string>
</resources>