<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ranking_background">

    <ImageView
        android:id="@+id/imgUserRanking"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/imageDescription"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtRankingPosition"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/userimage" />

    <TextView
        android:id="@+id/txtRankingPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/exampleNumber"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/imageDescription"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/imgUserRanking"
        app:layout_constraintEnd_toEndOf="@+id/imgUserRanking"
        app:layout_constraintStart_toStartOf="@+id/imgUserRanking"
        app:layout_constraintTop_toTopOf="@+id/imgUserRanking"
        app:srcCompat="@drawable/elipseresto" />

    <TextView
        android:id="@+id/txtNameRanking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgUserRanking"
        app:layout_constraintStart_toEndOf="@+id/imgUserRanking"
        app:layout_constraintTop_toTopOf="@+id/imgUserRanking" />

    <TextView
        android:id="@+id/txtPointsRanking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/examplePoints"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="9dp"
        android:contentDescription="@string/imageDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtPointsRanking"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/puntos"
        tools:ignore="ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>